methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:4: error: too many arguments for method getCouleurSol: ()java.awt.Color
    if (isFacingTrail(getCouleurSol(c))) {
                                   ^